# Recipe-Tree-Visualizer

./: .dockerignore  .env.example  .gitignore  CHECKPOINT_3.md  LICENSE  README.md  WorkingDescription.md  docker-compose.yml  project_stack.md
backend/: Dockerfile  debug_cm.py  pyproject.toml  requirements-bundle.txt
backend/app/: main.py
backend/app/calculator/: constants.py  machine_speed.py  production_calculator.py
backend/app/core/: config.py  logging.py  recipe_layout.py
backend/app/graph/: bipartite_graph.py  errors.py
backend/app/indexer/: mod_indexer.py  mod_registry.py  mod_summary.py
backend/app/mod_deps/: catalog.py  curseforge.py  modrinth.py  resolver.py
backend/app/parser/: exceptions.py  item_builder.py  jar_meta.py  jar_parser.py  jar_reader.py  loaders.py  minecraft_version.py  models.py  recipe_extractor.py  recipe_types.py
backend/app/recipes/: __init__.py  adapters.py  ae2_item_match.py  ae2_material_metadata.py  category.py  focus.py  ingredient.py  item_ref.py  legacy_item_icons.py  manager.py  models.py  recipe_io_utils.py  registry.py  types.py
backend/app/schemas/: canvas.py  domain.py  forge.py  graph.py  items.py  java_settings.py  mod_dependencies.py  modpack.py  profiles.py  recipe_bake.py  recipe_file.py  vanilla_icons.py  versions.py
backend/scripts/: generate_tag_snapshot.py
backend/tests/: conftest.py  test_ae2_item_match.py  test_ae2_recipe_loader.py  test_api_unified.py  test_category_extensions.py  test_export_recipe_repair.py  test_forge_install.py  test_health.py  test_host_paths.py  test_icon_aliases.py  test_icon_name_resolver.py  test_icon_registry.py  test_immersive_create_extensions.py  test_ingredient_index.py  test_ingredient_registry.py  test_item_catalog_loader.py  test_item_matching.py  test_item_ref.py  test_jar_reader_infer.py  test_java_runtime_service.py  test_jvm_export_diagnostics.py  test_jvm_recipe_export.py  test_jvm_recipe_export_http.py  test_kubejs_custom_machinery_parser.py  test_kubejs_data_provider.py  test_kubejs_import.py  test_kubejs_script_parser.py  test_legacy_item_icons.py  test_legacy_recipes.py  test_minecraft_version_catalog.py  test_minecraft_version_compat.py  test_mod_delete.py  test_mod_dependency_service.py  test_mod_fallback_registration.py  test_mod_jar_provider.py  test_mod_registry_cleanup.py  test_mod_storage_scan.py  test_mod_version_filter.py  test_modpack_version.py  test_ore_dict_loader.py  (+15 more)
desktop/: .gitignore  (+3 more)
(+219 files in other folders)
