[project]
name = "recipe-tree-visualizer"
version = "0.1.0"
description = "Backend API for Minecraft mod recipe dependency trees"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "orjson>=3.10",
    "networkx>=3.4",
    "python-multipart>=0.0.17",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# FastAPI использует вызовы Query/Depends/Path/Body как значения по умолчанию —
# это идиоматично и безопасно, поэтому исключаем их из проверки B008.
[tool.ruff.lint.per-file-ignores]
# Тесты содержат дословные многострочные KubeJS-фикстуры (реальные строки из модов),
# которые нельзя переносить без искажения тестовых данных.
"tests/test_kubejs_custom_machinery_parser.py" = ["E501"]
"tests/test_kubejs_script_parser.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Query",
    "fastapi.Depends",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Header",
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app"]

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
